# mtg-sim

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  main.cpp  mtg
include/: .Card.h.swp  Card.h  Deck.h  Game.h  GameRecord.h  Land.h  ManaPool.h  Settings.h  Stats.h  run.h
sample_inputs/: basic_test.py  jeskai.txt
src/: Card.cpp  Game.cpp  ManaPool.cpp  run.cpp
